# McDaCpp

./: README.md
McDaASM/Learning/: main.asm
McDaC#/Learning/GeneralLearning/: Program.cs  Student.cs
McDaC#/Projects/BattleSimulator/: Battle.cs  Fighter.cs  General.cs  Program.cs
McDaC++/BSC/: BSCExtraTypes.hpp  BSCMultiBool.hpp  BSCTypes.hpp  CMakeLists.txt
McDaC++/BSC/BSC/: CMakeLists.txt  main.cpp
McDaC++/BSC/BSC.xcodeproj/: project.pbxproj
McDaC++/BSC/BSC.xcodeproj/project.xcworkspace/xcuserdata/seth.xcuserdatad/: UserInterfaceState.xcuserstate
McDaC++/BSC/BSC.xcodeproj/xcuserdata/seth.xcuserdatad/xcschemes/: xcschememanagement.plist
McDaC++/BSC/BSC/include/: BSCgrid.hpp  BSCmath.hpp  BSCpch.hpp  BSCtypes.hpp
McDaC++/BSC/BSC/src/: main.cpp
McDaC++/BSC/BSC/src/grid/: BSCfunction.cpp  BSCoperator.cpp
McDaC++/BSC/BSC/src/math/: BSCarithmatic.cpp  BSCprobSolve.cpp
McDaC++/BSC/BSC/src/types/: BSCfunction.cpp  BSCoperator.cpp
McDaC++/BSC/include/: BSCgrid.hpp  BSCmath.hpp  BSCmultiBool.hpp  BSCpch.hpp  BSCtypes.hpp
McDaC++/BSC/src/grid/: BSCconstruct.cpp  BSCfunction.cpp
McDaC++/BSC/src/types/: BSCoperator.cpp
McDaC++/Learning/LearnOpenGL/: main.cpp
McDaC++/Learning/MultiClasses/: CreateUser.cpp  CreateUser.h  Main.cpp  Users  makefile
McDaC++/Learning/MultiFile/: Best_Game  FirstGame.cpp  GameUtils.cpp  GameUtils.h  makefile
McDaC++/Learning/OpenGLTest/OpenGLTest/: imgui.ini  main.cpp  myApp
McDaC++/Learning/OpenGLTest/OpenGLTest.xcodeproj/: project.pbxproj
McDaC++/Learning/OpenGLTest/OpenGLTest/res/shaders/: basic.shader
McDaC++/Learning/OpenGLTest/OpenGLTest/src/: indexBuffer.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferElement.cpp  vertexBufferLayout.cpp
McDaC++/Learning/OpenGLTest/OpenGLTest/src/include/: indexBuffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferElement.hpp  vertexBufferLayout.hpp
McDaC++/Learning/OpenGLTest/OpenGLTest/src/tests/: clearColor.cpp  test.cpp  texture2D.cpp
McDaC++/Learning/OpenGL_Prac/OpenGL Prac/OpenGL Prac/: main.cpp
McDaC++/Learning/OpenGL_Prac/OpenGL Prac/OpenGL Prac.xcodeproj/: project.pbxproj
McDaC++/Learning/OtherNotes/: ArrayVector.cpp  HelloWorld.cpp  Hexidecimal.cpp  IfElseSwitch.cpp  Math.cpp  NumericFunctions.cpp  OperatorOverload.cpp  OverLoading.cpp  Practice.cpp  ReadingWritingFIles.cpp  Strings.cpp  StructsClasses.cpp  Text.txt  TurnaryOperator.cpp  WhileForDo.cpp
McDaC++/Learning/SFMLTest/src/: main.cpp  sfml-app
McDaC++/Learning/Vulkan/: CMakeLists.txt  compileShaders.sh  vk_apidump.html  vk_apidump.json  vk_apidump.txt  vk_layer_settings.txt
McDaC++/Learning/Vulkan/assets/shaders/: scene.vert  triangle.frag  triangle.vert
McDaC++/Learning/Vulkan/shaders/: triangle.frag  triangle.vert
McDaC++/Learning/Vulkan/src/: application.cpp  application.hpp  libraries.cpp  main.cpp
McDaC++/Projects/BattleSim/: basic.hpp  battle.cpp  battle.hpp  fighter.cpp  fighter.hpp  main  main.cpp  makefile  start.cpp  start.hpp
McDaC++/Projects/BattleSim/BattleSim/: Battle_Project  basic.cpp  basic.hpp  battle.cpp  battle.hpp  fighter.cpp  fighter.hpp  main.cpp  makefile  start.cpp  start.hpp
McDaC++/Projects/BattleSim/BattleSim.xcodeproj/: project.pbxproj
McDaC++/Projects/BattleSim/BattleSim.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
McDaC++/Projects/BattleSim/BattleSim.xcodeproj/xcshareddata/xcschemes/: BattleSim.xcscheme
McDaC++/Projects/BattleSim/BattleSim/Accounts/: test.txt
McDaC++/Projects/BattleSim/BattleSim/include/: battle.hpp  bspch.hpp  fighter.hpp  start.hpp
McDaC++/Projects/BattleSim/BattleSim/src/: BattleSim  BattleSimDebug  battle.cpp  fighter.cpp  main.cpp  start.cpp
McDaC++/Projects/BattleSim/include/: battle.hpp  bspch.hpp  fighter.hpp  start.hpp
McDaC++/Projects/BattleSim/src/: battle.cpp  exe  fighter.cpp  main.cpp  start.cpp
McDaC++/Projects/LuhnAlgorithm/: LuhnAlgorithm  application.c  application.h  main.c
McDaC++/Projects/MazeCreator/: CMakeLists.txt
McDaC++/Projects/MazeCreator/MazeCreator/: main.cpp  maze.cpp  maze.hpp
McDaC++/Projects/MazeCreator/MazeCreator.xcodeproj/: project.pbxproj
McDaC++/Projects/MazeCreator/MazeCreator.xcodeproj/project.xcworkspace/xcuserdata/seth.xcuserdatad/: UserInterfaceState.xcuserstate
McDaC++/Projects/MazeCreator/MazeCreator.xcodeproj/xcuserdata/seth.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
McDaC++/Projects/MazeCreator/MazeCreator.xcodeproj/xcuserdata/seth.xcuserdatad/xcschemes/: xcschememanagement.plist
McDaC++/Projects/Recreations/: Array.cpp  Basic.hpp  Vector.cpp  main.cpp
McDaC++/Projects/Sorting/: main.cpp  structs.cpp  structs.hpp
McDaC++/Projects/StopwatchTimer/: Stopwatch  functions.cpp  functions.h  main.cpp  makefile
McDaC++/Projects/TicTacToe/: CMakeLists.txt  TicTacToe  compile.sh  imgui.ini
McDaC++/Projects/TicTacToe/res/shaders/: basic.frag  basic.vert  board.vert  shadeBlue.frag  shadeBlue.vert
McDaC++/Projects/TicTacToe/src/: blender.cpp  board.cpp  dearImGui.cpp  events.cpp  indexBuffer.cpp  main.cpp  maze.cpp  piece.cpp  renderer.cpp  shader.cpp  square.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferElement.cpp  vertexBufferLayout.cpp  window.cpp
McDaC++/Projects/TicTacToe/src/include/: GLclasses.hpp  blender.hpp  board.hpp  dearImGui.hpp  events.hpp  indexBuffer.hpp  maze.hpp  piece.hpp  renderer.hpp  shader.hpp  square.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferElement.hpp  vertexBufferLayout.hpp  window.hpp
McDaC/Learning/LinkedLists/: makefile
McDaC/Learning/LinkedLists/src/: hashTable.c  main.c  node.c  nodeFuncs.c
McDaC/Learning/LinkedLists/src/include/: hashTable.h  node.h  nodeFuncs.h
McDaC/Mining/: main.c
McDaJS/: main.html
McDaJS/JS/: main.js
McDaPython/McDaProjects/BattleProject/: Battle.py
McDaScripts/: CreateCppProject.py
McDaSwift/Learning Swift/Learning Swift/: ContentView.swift  Learning_SwiftApp.swift
McDaSwift/Learning Swift/Learning Swift.xcodeproj/: project.pbxproj
(+14 files in other folders)
